# UrlCutter

./: .gitignore  docker-compose.yaml  pyproject.toml
app/: exeptions.py  main.py  script.py  service.py  shortener.py
app/__pycache__/: main.cpython-313.pyc.2148482801360  service.cpython-313.pyc.1596738036304
app/auth/: jwt.py  routers.py  security.py
app/database/: crud.py  db.py  models.py
app/database/__pycache__/: crud.cpython-313.pyc.1670400697136
app/dependencies/: dependencies.py
app/static/: index.html
